--- a/Fanaticos412/Fanaticos412/platforms/android/AndroidManifest.xml
+++ b/Fanaticos412/Fanaticos412/platforms/android/AndroidManifest.xml
@@ -28,4 +28,5 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <permission android:name="com.hecticus.fanaticos412.permission.C2D_MESSAGE" android:protectionLevel="signature" />
     <uses-permission android:name="com.hecticus.fanaticos412.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 </manifest>
