Plugin de SMS para fanaticos 412 en Android funcionando

--- a/Fanaticos412/Fanaticos412/platforms/android/assets/www/plugins/com.plugin.sms/plugin.xml
+++ b/Fanaticos412/Fanaticos412/platforms/android/assets/www/plugins/com.plugin.sms/plugin.xml
@@ -10,7 +10,7 @@ id="com.plugin.sms"
     <keywords>cordova,sms</keywords>
 
     <js-module src="www/smsplugin.js" name="SMSPlugin">
-        <clobbers target="window.smsplugin" />
+        <clobbers target="window.plugins.smsPlugin" />
     </js-module>
     
     <!-- android -->
