--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -41,17 +41,33 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+#default database: tvn_admin
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://10.0.3.2:3306/tvn_admin?characterEncoding=UTF-8"
+db.default.user=admin
+db.default.password="h3ct1cus*"
+db.default.partitionCount=2
+db.default.maxConnectionsPerPartition=10
+db.default.minConnectionsPerPartition=2
+db.default.acquireIncrement=2
+#por defecto 5 minutes
+db.default.idleConnectionTestPeriod=10 minutes
+#Por defecto 1 segundo
+db.default.connectionTimeout=2 seconds
+
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+ evolutionplugin=enabled
 
 # Ebean configuration
 # ~~~~~
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.news.*"
+
 
 # Logger
 # ~~~~~
@@ -66,3 +82,41 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# SMTP mailer settings
+smtp {
+    # SMTP server
+    # (mandatory)
+    # defaults to gmail
+    host=smtp.gmail.com
+
+    # SMTP port
+    # defaults to 25
+    port=587
+
+    # Use SSL
+    # for GMail, this should be set to true
+    ssl=true
+
+    # authentication user
+    # Optional, comment this line if no auth
+    # defaults to no auth
+    user="you@gmail.com"
+
+    # authentication password
+    # Optional, comment this line to leave password blank
+    # defaults to no password
+    password=password
+}
+
+play-easymail {
+    from {
+        # Mailing from address
+        email="you@gmail.com"
+
+        # Mailing name
+        name="Your Name"
+
+        # Seconds between sending mail through Akka (defaults to 1)
+        # delay=1
+    }
+}
