--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -42,10 +42,24 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 #default database: tvn_admin
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://10.0.3.2:3306/tvn_admin?characterEncoding=UTF-8"
+#db.default.user=admin
+#db.default.password="h3ct1cus*"
+#db.default.partitionCount=2
+#db.default.maxConnectionsPerPartition=10
+#db.default.minConnectionsPerPartition=2
+#db.default.acquireIncrement=2
+#por defecto 5 minutes
+#db.default.idleConnectionTestPeriod=10 minutes
+#Por defecto 1 segundo
+#db.default.connectionTimeout=2 seconds
+
+#default database: tvn_admin
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://10.0.3.2:3306/tvn_admin?characterEncoding=UTF-8"
-db.default.user=admin
-db.default.password="h3ct1cus*"
+db.default.url="jdbc:mysql://127.0.0.1:3306/tvn_admin?characterEncoding=UTF-8"
+db.default.user=root
+db.default.password="1"
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=10
 db.default.minConnectionsPerPartition=2
@@ -54,6 +68,7 @@ db.default.acquireIncrement=2
 db.default.idleConnectionTestPeriod=10 minutes
 #Por defecto 1 segundo
 db.default.connectionTimeout=2 seconds
+
 
 
 # Evolutions
@@ -66,7 +81,7 @@ db.default.connectionTimeout=2 seconds
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-ebean.default="models.news.*"
+ebean.default="models.*"
 
 
 # Logger
