Cambios para incorporar los trending topics y las categorias descargadas, todavia no esta terminado pero tiene los placeholders para que Ali pueda continuar trabajando

--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -57,9 +57,9 @@ application.langs="en"
 
 #default database: tvn_admin
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://127.0.0.1:3306/tvn_admin?characterEncoding=UTF-8"
-db.default.user=root
-db.default.password="1"
+db.default.url="jdbc:mysql://10.0.3.2:3306/tvn_admin?characterEncoding=UTF-8"
+db.default.user=admin
+db.default.password="h3ct1cus*"
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=10
 db.default.minConnectionsPerPartition=2
@@ -74,7 +74,7 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
- evolutionplugin=enabled
+ evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
