Se implementa clase global y action para hacer redirect a protocolo seguro (reverted from commit 62dc30d95f1575d4e8ec1d92084f33e943b2db5c) y se implementa un inlcude

--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -57,7 +57,7 @@ application.langs="en"
 
 #default database: tvn_admin
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://10.0.3.2:3306/tvn_admin?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://127.0.0.1:3306/tvn_admin?characterEncoding=UTF-8"
 db.default.user=admin
 db.default.password="h3ct1cus*"
 db.default.partitionCount=2
@@ -135,3 +135,5 @@ play-easymail {
         # delay=1
     }
 }
+
+include "securesocial.conf"
