TVMaxPolla: Modelos y controladores para obtener los partidos en la polla. Nuevo Dump de la BD que reemplaza la anterior. Resuelve el ticket PT-7
-http://localhost:9000/matchesapi/v1/phase/get/matches/current para obtener todos los partidos de la fase actual activa

--- a/TVMaxPolla/web/TVMaxPolla/conf/application.conf
+++ b/TVMaxPolla/web/TVMaxPolla/conf/application.conf
@@ -42,11 +42,12 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 
-#default database: tvmax_polla
+#default database: tvmax_polla_admin
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/tvmax_polla?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://localhost:3306/tvmax_polla_admin?characterEncoding=UTF-8"
 db.default.user=admin
-db.default.password="h3ct1cus*"
+#db.default.password="h3ct1cus*"
+db.default.password="1234"
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=10
 db.default.minConnectionsPerPartition=2
@@ -61,7 +62,8 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+# evolutionplugin=enabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
