--- a/TVMaxPolla/web/TVMaxPolla/conf/application.conf
+++ b/TVMaxPolla/web/TVMaxPolla/conf/application.conf
@@ -46,8 +46,8 @@ application.langs="en"
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/tvmax_polla_admin?characterEncoding=UTF-8"
 db.default.user=admin
-#db.default.password="h3ct1cus*"
-db.default.password="1234"
+db.default.password="h3ct1cus*"
+#db.default.password="1234"
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=10
 db.default.minConnectionsPerPartition=2
