TVMaxPolla: Se crea la configuracion de la base de datos de produccion, para desarrollo se tienen que cambiar estos valores

--- a/TVMaxPolla/web/TVMaxPolla/conf/application.conf
+++ b/TVMaxPolla/web/TVMaxPolla/conf/application.conf
@@ -41,12 +41,22 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+#PRODUCTION
+hecticusvars_tvmax_polla.login = play
+hecticusvars_tvmax_polla.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_tvmax_polla.ip = "10.181.142.107"
+
+#DEVELOPER
+#hecticusvars_tvmax_polla.login = admin
+#hecticusvars_tvmax_polla.password = "1234"
+#hecticusvars_tvmax_polla.ip = "127.0.0.1"
 
 #default database: tvmax_polla_admin
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/tvmax_polla_admin?characterEncoding=UTF-8"
-db.default.user=admin
-db.default.password="1234"
+#db.default.url="jdbc:mysql://localhost:3306/tvmax_polla_admin?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://"${?hecticusvars_tvmax_polla.ip}":3306/tvmax_polla_admin?characterEncoding=UTF-8"
+db.default.user=${?hecticusvars_tvmax_polla.login}
+db.default.password=${?hecticusvars_tvmax_polla.password}
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=10
 db.default.minConnectionsPerPartition=2
