NoticiasTVN: Todos los cambios antes de subir a produccion version 1.0

--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -41,11 +41,27 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+#PRODUCTION
+hecticusvars_tvn.login = play
+hecticusvars_tvn.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_tvn.ip = "10.181.142.107"
+
+#DEVELOP
+#hecticusvars_tvn.login = admin
+#hecticusvars_tvn.password = "1234"
+#hecticusvars_tvn.ip = "127.0.0.1"
+
 #default database: tvn_admin
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://sorcerer:3306/tvn_admin?characterEncoding=UTF-8"
-db.default.user=root
-db.default.password="jedi46"
+db.default.url="jdbc:mysql://"${?hecticusvars_tvn.ip}":3306/tvn_admin?characterEncoding=UTF-8"
+db.default.user=${?hecticusvars_tvn.login}
+db.default.password=${?hecticusvars_tvn.password}
+#db.default.url="jdbc:mysql://x-wing:3306/tvn_admin?characterEncoding=UTF-8"
+#db.default.user=admin
+#db.default.password="h3ct1cus*"
+#db.default.url="jdbc:mysql://localhost:3306/tvn_admin?characterEncoding=UTF-8"
+#db.default.user=admin
+#db.default.password="1234"
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=10
 db.default.minConnectionsPerPartition=2
