--- a/NoticiasTVN/NoticiasTVN/platforms/android/AndroidManifest.xml
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/AndroidManifest.xml
@@ -20,6 +20,8 @@
     </application>
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
