--- a/NoticiasTVN/NoticiasTVN/platforms/ios/NoticiasTVN/NoticiasTVN-Info.plist
+++ b/NoticiasTVN/NoticiasTVN/platforms/ios/NoticiasTVN/NoticiasTVN-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>Spanish</string>
 	<key>CFBundleDisplayName</key>
 	<string>TVN Noticias</string>
 	<key>CFBundleExecutable</key>
@@ -57,10 +57,12 @@
 	<string>TVN Noticias</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.8</string>
+	<string>2.0.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
