--- a/NoticiasTVN/NoticiasTVN/platforms/iphone/NoticiasTVN/NoticiasTVN_iPhone-Info.plist
+++ b/NoticiasTVN/NoticiasTVN/platforms/iphone/NoticiasTVN/NoticiasTVN_iPhone-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>Spanish</string>
 	<key>CFBundleDisplayName</key>
 	<string>TVN Noticias</string>
 	<key>CFBundleExecutable</key>
