--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -44,7 +44,7 @@ application.langs="en"
 #PRODUCTION
 hecticusvars_tvn.login = play
 hecticusvars_tvn.password = "YRGFnGED3bGG5ARBWH"
-hecticusvars_tvn.ip = "10.181.142.107"
+hecticusvars_tvn.ip = "int.bd.hecticus.com"
 
 #DEVELOP
 #hecticusvars_tvn.login = admin
