--- a/TVMaxPolla/web/TVMaxPolla/conf/application.conf
+++ b/TVMaxPolla/web/TVMaxPolla/conf/application.conf
@@ -44,7 +44,7 @@ application.langs="en"
 #PRODUCTION
 hecticusvars_tvmax_polla.login = play
 hecticusvars_tvmax_polla.password = "YRGFnGED3bGG5ARBWH"
-hecticusvars_tvmax_polla.ip = "int.bd.hecticus.com"
+hecticusvars_tvmax_polla.ip = "10.181.142.107"
 
 #DEVELOPER
 #hecticusvars_tvmax_polla.login = admin
