Se actualiza el nombre de la bd

--- a/NoticiasTVN/web/TvnAdmin/conf/application.conf
+++ b/NoticiasTVN/web/TvnAdmin/conf/application.conf
@@ -42,14 +42,14 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars_tvn.login = play
-#hecticusvars_tvn.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars_tvn.ip = "int.bd.hecticus.com"
+hecticusvars_tvn.login = play
+hecticusvars_tvn.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_tvn.ip = "int.bd.hecticus.com"
 
 #DEVELOP
-hecticusvars_tvn.login = admin
-hecticusvars_tvn.password = "1234"
-hecticusvars_tvn.ip = "127.0.0.1"
+#hecticusvars_tvn.login = admin
+#hecticusvars_tvn.password = "1234"
+#hecticusvars_tvn.ip = "127.0.0.1"
 
 #default database: tvn_admin
 db.default.driver=com.mysql.jdbc.Driver
@@ -136,4 +136,4 @@ play-easymail {
     }
 }
 
-include "securesocial.conf"
+#include "securesocial.conf"
