--- a/FutbolBrasil/app/platforms/.gitignore
+++ b/FutbolBrasil/app/platforms/.gitignore
@@ -2,6 +2,8 @@ android/bin/
 android/gen/
 android/ant-build/
 android/ant-gen/
+android/CordovaLib/bin/
+android/CordovaLib/gen/
 android/com.phonegap.plugins.facebookconnect/FacebookLib/bin/
 android/com.phonegap.plugins.facebookconnect/FacebookLib/gen/
 
