--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="e:XMOe>lKru8q_jckyPplm79y9Ex/35qDjcBRvD[yIj>X9:quGJEm<H01^8c
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,de,pl,fr,es,ja"
 
 # Global object class
 # ~~~~~
@@ -73,8 +73,8 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-#evolutionplugin=enable
- evolutionplugin=disabled
+evolutionplugin=enable
+#evolutionplugin=disabled
  
  
 # Ebean configuration
@@ -97,4 +97,14 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+# Deadbolt
+include "play-authenticate/deadbolt.conf"
+
+# SMTP
+include "play-authenticate/smtp.conf"
+
+# And play authenticate
+include "play-authenticate/mine.conf"
+
 
