--- a/AGataDoDia/Pimp/pimp/conf/application.conf
+++ b/AGataDoDia/Pimp/pimp/conf/application.conf
@@ -71,7 +71,7 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=enabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
