rollback del merge loco que se invento sourcetree

--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -51,13 +51,13 @@ application.langs="en,de,pl,fr,es,ja"
 
 #DEVELOP
 hecticusvars.login = admin
-hecticusvars.password = "h3ct1cus*"
-hecticusvars.ip = "10.0.3.2"
+hecticusvars.password = "1234"
+hecticusvars.ip = "127.0.0.1"
 
 
 #default database: futbolBrasil
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${?hecticusvars.ip}":3306/futbolbrasil?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://"${?hecticusvars.ip}":3306/futbolBrasil?characterEncoding=UTF-8"
 db.default.user=${?hecticusvars.login}
 db.default.password=${?hecticusvars.password}
 db.default.partitionCount=2
