--- a/TVMaxPolla/web/TVMaxPolla/conf/application.conf
+++ b/TVMaxPolla/web/TVMaxPolla/conf/application.conf
@@ -42,19 +42,19 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars_tvmax_polla.login = play
-#hecticusvars_tvmax_polla.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars_tvmax_polla.ip = "int.bd.hecticus.com"
+hecticusvars_tvmax_polla.login = play
+hecticusvars_tvmax_polla.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_tvmax_polla.ip = "int.bd.hecticus.com"
 
 #DEVELOPER
-hecticusvars_tvmax_polla.login = admin
-hecticusvars_tvmax_polla.password = "h3ct1cus*"
-hecticusvars_tvmax_polla.ip = "10.0.3.2"
+#hecticusvars_tvmax_polla.login = admin
+#hecticusvars_tvmax_polla.password = "1234"
+#hecticusvars_tvmax_polla.ip = "127.0.0.1"
 
 #default database: tvmax_polla_admin
 db.default.driver=com.mysql.jdbc.Driver
 #db.default.url="jdbc:mysql://localhost:3306/tvmax_polla_admin?characterEncoding=UTF-8"
-db.default.url="jdbc:mysql://"${?hecticusvars_tvmax_polla.ip}":3306/tvmax_polla_admin_inaki?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://"${?hecticusvars_tvmax_polla.ip}":3306/tvmax_polla_admin?characterEncoding=UTF-8"
 db.default.user=${?hecticusvars_tvmax_polla.login}
 db.default.password=${?hecticusvars_tvmax_polla.password}
 db.default.partitionCount=2
