--- a/AGataDoDia/Pimp/pimp/conf/application.conf
+++ b/AGataDoDia/Pimp/pimp/conf/application.conf
@@ -45,14 +45,14 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars_pimp.login = play
-#hecticusvars_pimp.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars_pimp.ip = "int.bd.hecticus.com"
+hecticusvars_pimp.login = play
+hecticusvars_pimp.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_pimp.ip = "int.bd.hecticus.com"
 
 #DEVELOPER
-hecticusvars_pimp.login = admin
-hecticusvars_pimp.password = "h3ct1cus*"
-hecticusvars_pimp.ip = "10.0.3.2"
+#hecticusvars_pimp.login = admin
+#hecticusvars_pimp.password = "h3ct1cus*"
+#hecticusvars_pimp.ip = "10.0.3.2"
 
 #default database: pmc
 db.default.driver=com.mysql.jdbc.Driver
