PIMP: creación de usuarios, login, validación de seguridad y textos localizados

--- a/AGataDoDia/Pimp/pimp/conf/application.conf
+++ b/AGataDoDia/Pimp/pimp/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="hsKlI9xVu:sI;9V[A5f`l21>F]=ENOpi:M;Y5XMGF9bU[dMo82F816nNdtoM
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,es"
 
 # Global object class
 # ~~~~~
