--- a/AGataDoDia/Pimp/pimp/conf/play-authenticate/mine.conf
+++ b/AGataDoDia/Pimp/pimp/conf/play-authenticate/mine.conf
@@ -20,10 +20,10 @@ play-authenticate {
             }
             from {
                 # Mailing from address
-                email="alidaniel.buenano@hecticus.com"
+                email="alarma.rk@hecticus.com"
 
                 # Mailing name
-                name=Play Authenticate
+                name=A Gata Do Dia
             }
             # Pause between email jobs (in seconds)
             delay=1
