--- a/AGataDoDia/Pimp/pimp/conf/play-authenticate/smtp.conf
+++ b/AGataDoDia/Pimp/pimp/conf/play-authenticate/smtp.conf
@@ -1,7 +1,7 @@
 # SMTP mailer settings
 smtp {
     # TODO: Disable this in production
-    mock=true
+    #mock=true
     # SMTP server
     # (mandatory)
     # defaults to gmail
@@ -18,10 +18,10 @@ smtp {
     # authentication user
     # Optional, comment this line if no auth
     # defaults to no auth
-    user="alidaniel.buenano@hecticus.com"
+    user="alarma.rk@hecticus.com"
 
     # authentication password
     # Optional, comment this line to leave password blank
     # defaults to no password
-    password="!vzla038980855"
+    password=alarma12345
 }
