FUTBOLBRASIL: se crearon las clases necesarias para manejar los clientes, los leaderboards y las apuestas de los clientes, hay un DUMP de desarrollo que es el que se debe usar modificando los Configs del mismo

--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="e:XMOe>lKru8q_jckyPplm79y9Ex/35qDjcBRvD[yIj>X9:quGJEm<H01^8c
 
 # The application languages
 # ~~~~~
-application.langs="en,de,pl,fr,es,ja"
+application.langs="en,es"
 
 # Global object class
 # ~~~~~
@@ -45,14 +45,14 @@ application.langs="en,de,pl,fr,es,ja"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars.login = play
-#hecticusvars.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars.ip = "int.bd.hecticus.com"
+hecticusvars.login = play
+hecticusvars.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars.ip = "int.bd.hecticus.com"
 
 #DEVELOP
-hecticusvars.login = admin
-hecticusvars.password = "1234"
-hecticusvars.ip = "127.0.0.1"
+#hecticusvars.login = admin
+#hecticusvars.password = "1234"
+#hecticusvars.ip = "127.0.0.1"
 
 
 #default database: futbolBrasil
@@ -73,7 +73,7 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=enable
+#evolutionplugin=enable
 #evolutionplugin=disabled
  
  
