[FootballMangager] cambios para feeds y modelos nuevos

--- a/FutbolBrasil/FootballManager/conf/application.conf
+++ b/FutbolBrasil/FootballManager/conf/application.conf
@@ -71,7 +71,7 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=disabled
+evolutionplugin=enabled
 
 # Ebean configuration
 # ~~~~~
