[FootballManager] cambios a validate y a jobs

--- a/FutbolBrasil/FootballManager/conf/application.conf
+++ b/FutbolBrasil/FootballManager/conf/application.conf
@@ -54,7 +54,7 @@ hecticusvars_pmc.login = root
 hecticusvars_pmc.password = "jedi46"
 hecticusvars_pmc.ip = "localhost"
 
-#default database: kyubi
+default database: kyubi
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://"${?hecticusvars_pmc.ip}":3306/kyubi?characterEncoding=UTF-8"
 db.default.user=${?hecticusvars_pmc.login}
@@ -71,7 +71,7 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=enabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
