FOOTBALLMANAGER: se actualiza el application.conf para ambiente de produccion

--- a/FutbolBrasil/FootballManager/conf/application.conf
+++ b/FutbolBrasil/FootballManager/conf/application.conf
@@ -45,20 +45,20 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars_pmc.login = play
-#hecticusvars_pmc.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars_pmc.ip = "int.bd.hecticus.com"
+hecticusvars_footballmanager.login = play
+hecticusvars_footballmanager.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_footballmanager.ip = "int.bd.hecticus.com"
 
 #DEVELOPER
-hecticusvars_pmc.login = root
-hecticusvars_pmc.password = "jedi46"
-hecticusvars_pmc.ip = "localhost"
+#hecticusvars_footballmanager.login = root
+#hecticusvars_footballmanager.password = "jedi46"
+#hecticusvars_footballmanager.ip = "localhost"
 
-default database: kyubi
+default database: football_manager
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${?hecticusvars_pmc.ip}":3306/kyubi?characterEncoding=UTF-8"
-db.default.user=${?hecticusvars_pmc.login}
-db.default.password=${?hecticusvars_pmc.password}
+db.default.url="jdbc:mysql://"${?hecticusvars_footballmanager.ip}":3306/football_manager?characterEncoding=UTF-8"
+db.default.user=${?hecticusvars_footballmanager.login}
+db.default.password=${?hecticusvars_footballmanager.password}
 db.default.partitionCount=2
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=1
