FOOTBALLBRAZIL: cambios para poder subir el web por jenkins y merge de los clientes del PIMP

--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -55,9 +55,9 @@ hecticusvars.ip = "int.bd.hecticus.com"
 #hecticusvars.ip = "127.0.0.1"
 
 
-#default database: futbolBrasil
+#default database: football_brazil
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${?hecticusvars.ip}":3306/futbolBrasil?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://"${?hecticusvars.ip}":3306/football_brazil?characterEncoding=UTF-8"
 db.default.user=${?hecticusvars.login}
 db.default.password=${?hecticusvars.password}
 db.default.partitionCount=2
