AGATADODIA: arreglos para reparar daños del update de cordova, ya la aplicacion en Android funciona bien nuevamente

--- a/AGataDoDia/AGataDoDia/AGataDoDia/plugins/com.hecticus.cordova.plugins/plugin.xml
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/plugins/com.hecticus.cordova.plugins/plugin.xml
@@ -4,7 +4,7 @@
         id="com.hecticus.cordova.plugins"
         version="1.0.0">
 
-  <name>Sharedconfigurations</name>
+  <name>sharedconfigurations</name>
 
   <description>
     Share preferences js-native code
