--- a/AGataDoDia/AGataDoDia/AGataDoDia/plugins/com.hecticus.cordova.plugins/plugin.xml
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/plugins/com.hecticus.cordova.plugins/plugin.xml
@@ -47,7 +47,7 @@
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="SharedConfigurations">
-        <param name="android-package" value="com.hecticus.cordova.plugins.sharedconfigurations.SharedConfigurations" />
+        <param name="android-package" value="com.hecticus.cordova.plugins.sharedconfigurations.sharedconfigurations" />
       </feature>
     </config-file>
 
