PIMP: rename a Memepedia

--- a/Memepedia/Pimp/pimp/conf/play-authenticate/mine.conf
+++ b/Memepedia/Pimp/pimp/conf/play-authenticate/mine.conf
@@ -23,7 +23,7 @@ play-authenticate {
                 email="alarma.rk@hecticus.com"
 
                 # Mailing name
-                name=A Gata Do Dia
+                name=Memepedia
             }
             # Pause between email jobs (in seconds)
             delay=1
