FUTBOLBRASIL: rename a fútbol brasil

--- a/FutbolBrasil/web/conf/play-authenticate/mine.conf
+++ b/FutbolBrasil/web/conf/play-authenticate/mine.conf
@@ -23,7 +23,7 @@ play-authenticate {
                 email="alidaniel.buenano@hecticus.com"
 
                 # Mailing name
-                name=Play Authenticate
+                name=Futbol Brasil
             }
             # Pause between email jobs (in seconds)
             delay=1
