--- a/FutbolBrasil/FootballManager/conf/play-authenticate/mine.conf
+++ b/FutbolBrasil/FootballManager/conf/play-authenticate/mine.conf
@@ -23,7 +23,7 @@ play-authenticate {
                 email="alarma.rk@hecticus.com"
 
                 # Mailing name
-                name=PMC
+                name=Football Manager
             }
             # Pause between email jobs (in seconds)
             delay=1
