Memepedia: production configs

--- a/Memepedia/Server/Memepedia/conf/application.conf
+++ b/Memepedia/Server/Memepedia/conf/application.conf
@@ -45,14 +45,14 @@ application.langs="en,es"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars_memepedia.login = play
-#hecticusvars_memepedia.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars_memepedia.ip = "int.bd.hecticus.com"
+hecticusvars_memepedia.login = play
+hecticusvars_memepedia.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_memepedia.ip = "int.bd.hecticus.com"
 
 #DEVELOPER
-hecticusvars_memepedia.login = admin
-hecticusvars_memepedia.password = "h3ct1cus*"
-hecticusvars_memepedia.ip = "10.0.3.2"
+#hecticusvars_memepedia.login = admin
+#hecticusvars_memepedia.password = "h3ct1cus*"
+#hecticusvars_memepedia.ip = "10.0.3.2"
 
 #default database: pmc
 db.default.driver=com.mysql.jdbc.Driver
