--- a/FutbolBrasil/futbol-brasil/bower.json
+++ b/FutbolBrasil/futbol-brasil/bower.json
@@ -16,6 +16,7 @@
     "angular-ui-router": "~0.2.10",
     "ngstorage": "~0.3.0",
     "moment": "~2.9.0",
-    "bootstrap-material-design": "~0.2.1"
+    "bootstrap-material-design": "~0.2.1",
+    "iscrolltest": "~5.1.3"
   }
 }
