--- a/FutbolBrasil/futbol-brasil/bower.json
+++ b/FutbolBrasil/futbol-brasil/bower.json
@@ -17,6 +17,8 @@
     "ngstorage": "~0.3.0",
     "moment": "~2.9.0",
     "bootstrap-material-design": "~0.2.1",
-    "iscrolltest": "~5.1.3"
+    "iscrolltest": "~5.1.3",
+    "angular-translate": "~2.6.0",
+    "angular-translate-loader-static-files": "~2.6.0"
   }
 }
