FOOTBALL_BRASIL: desactivando evolutions

--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -74,7 +74,7 @@ db.default.connectionTimeout=2 seconds
 # ~~~~~
 # You can disable evolutions if needed
 #evolutionplugin=enable
-#evolutionplugin=disabled
+evolutionplugin=disabled
  
  
 # Ebean configuration
