--- a/FutbolBrasil/futbol-brasil/bower.json
+++ b/FutbolBrasil/futbol-brasil/bower.json
@@ -19,6 +19,7 @@
     "bootstrap-material-design": "~0.2.1",
     "iscrolltest": "~5.1.3",
     "angular-translate": "~2.6.0",
-    "angular-translate-loader-static-files": "~2.6.0"
+    "angular-translate-loader-static-files": "~2.6.0",
+    "angular-socialsharing": "~0.1.3"
   }
 }
