--- a/FutbolBrasil/futbol-brasil/bower.json
+++ b/FutbolBrasil/futbol-brasil/bower.json
@@ -20,7 +20,8 @@
     "iscrolltest": "~5.1.3",
     "angular-translate": "~2.6.0",
     "angular-translate-loader-static-files": "~2.6.0",
-    "angular-socialsharing": "~0.1.3"
+    "angular-socialsharing": "~0.1.3",
+    "angular-translate-loader-url": "~2.6.1"
   },
   "resolutions": {
     "angular": "~1.2"
