EXTREME_SPORTS: geolocalizacion con mongo 2.6, vistas y ws para creación de eventos

--- a/ExtremeSports/server/ExtremeSports/conf/application.conf
+++ b/ExtremeSports/server/ExtremeSports/conf/application.conf
@@ -81,6 +81,11 @@ evolutionplugin=enable
 # ebean.default="models.*"
 ebean.default="models.*"
 
+
+mongodb.host="10.0.3.16"
+mongodb.port=23000
+mongodb.database=kraken_queues
+
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/),
