EXTREME_SPORTS: ajustes para producción

--- a/ExtremeSports/server/ExtremeSports/conf/application.conf
+++ b/ExtremeSports/server/ExtremeSports/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="Y>IM7Ne9Wl0mSX>0w0T<CJiON_DNs:m_urR/PGo;mVTbIQ6iW/n^QjZP<BkL
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,es"
 
 # Global object class
 # ~~~~~
@@ -45,14 +45,14 @@ application.langs="en"
 # db.default.jndiName=DefaultDS
 
 #PRODUCTION
-#hecticusvars_extreme.login = play
-#hecticusvars_extreme.password = "YRGFnGED3bGG5ARBWH"
-#hecticusvars_extreme.ip = "int.bd.hecticus.com"
+hecticusvars_extreme.login = play
+hecticusvars_extreme.password = "YRGFnGED3bGG5ARBWH"
+hecticusvars_extreme.ip = "int.bd.hecticus.com"
 
 #DEVELOPER
-hecticusvars_extreme.login = admin
-hecticusvars_extreme.password = "h3ct1cus*"
-hecticusvars_extreme.ip = "10.0.3.2"
+#hecticusvars_extreme.login = admin
+#hecticusvars_extreme.password = "h3ct1cus*"
+#hecticusvars_extreme.ip = "10.0.3.2"
 
 #default database: extreme_sports
 db.default.driver=com.mysql.jdbc.Driver
@@ -71,7 +71,7 @@ db.default.connectionTimeout=2 seconds
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=enable
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
