--- a/ExtremeSports/server/ExtremeSports/conf/play-authenticate/mine.conf
+++ b/ExtremeSports/server/ExtremeSports/conf/play-authenticate/mine.conf
@@ -23,7 +23,7 @@ play-authenticate {
                 email="alarma.rk@hecticus.com"
 
                 # Mailing name
-                name=Memepedia
+                name=Extreme Sports
             }
             # Pause between email jobs (in seconds)
             delay=1
