--- a/ExtremeSports/cordova-web/bower.json
+++ b/ExtremeSports/cordova-web/bower.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "angular": "~1.2",
-    "angular-resource": "~1.2",
+    "angular-resource": "~1.3.15",
     "angular-mocks": "~1.2",
     "angular-cookies": "~1.2",
     "angular-animate": "~1.2",
@@ -16,7 +16,7 @@
     "angular-ui-router": "~0.2.10",
     "bootstrap-material-design": "~0.3.0",
     "ngstorage": "~0.3.0",
-    "iscroll": "https://github.com/fdefreitas-hecticus/iscroll.git#master",
+    "iscroll": "https://github.com/hecticus/iscroll.git#master",
     "angular-socialsharing": "~0.1.3",
     "moment": "~2.10.0",
     "angular-translate": "~2.6.1",
@@ -24,6 +24,7 @@
   },
   "resolutions": {
     "iscroll": "master",
-    "angular": ">=1"
+    "angular": "1.3.15",
+    "angular-resource": "~1.3.15"
   }
 }
