FOOTBALL_MANAGER: conectando a la bd correcta

--- a/FutbolBrasil/FootballManager/conf/application.conf
+++ b/FutbolBrasil/FootballManager/conf/application.conf
@@ -56,7 +56,7 @@ hecticusvars_footballmanager.ip = "int.bd.hecticus.com"
 
 default database: football_manager
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${?hecticusvars_footballmanager.ip}":3306/football_manager_2?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://"${?hecticusvars_footballmanager.ip}":3306/football_manager?characterEncoding=UTF-8"
 db.default.user=${?hecticusvars_footballmanager.login}
 db.default.password=${?hecticusvars_footballmanager.password}
 db.default.partitionCount=2
