--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="e:XMOe>lKru8q_jckyPplm79y9Ex/35qDjcBRvD[yIj>X9:quGJEm<H01^8c
 
 # The application languages
 # ~~~~~
-application.langs="en,es"
+application.langs="en,es,pt"
 
 # Global object class
 # ~~~~~
