FOOTBALL_BRAZIL: vistas de jobs, configs, instancias y usuarios

--- a/FutbolBrasil/web/conf/play-authenticate/mine.conf
+++ b/FutbolBrasil/web/conf/play-authenticate/mine.conf
@@ -20,7 +20,7 @@ play-authenticate {
             }
             from {
                 # Mailing from address
-                email="alidaniel.buenano@hecticus.com"
+                email="alarma.rk@hecticus.com"
 
                 # Mailing name
                 name=Futbol Brasil
