--- a/FutbolBrasil/futbol-brasil/package.json
+++ b/FutbolBrasil/futbol-brasil/package.json
@@ -31,6 +31,7 @@
     "jpegtran-bin": "^2.0.2",
     "load-grunt-tasks": "~0.4.0",
     "lodash": "~2.4.1",
+    "plist": "^1.1.0",
     "swig": "~1.3.2"
   },
   "devDependencies": {
