--- a/FutbolBrasil/futbol-brasil/bower.json
+++ b/FutbolBrasil/futbol-brasil/bower.json
@@ -22,7 +22,8 @@
     "angular-socialsharing": "~0.1.3",
     "angular-translate-loader-url": "~2.6.1",
     "iscroll": "https://github.com/hecticus/iscroll.git#master",
-    "Flowtype.js": "1.1.0"
+    "Flowtype.js": "1.1.0",
+    "angular-google-analytics": "~0.0.18"
   },
   "resolutions": {
     "angular": "~1.2"
