--- a/FutbolBrasil/futbol-brasil/bower.json
+++ b/FutbolBrasil/futbol-brasil/bower.json
@@ -23,7 +23,8 @@
     "angular-translate-loader-url": "~2.6.1",
     "iscroll": "https://github.com/hecticus/iscroll.git#master",
     "Flowtype.js": "1.1.0",
-    "angular-google-analytics": "~0.0.18"
+    "angular-google-analytics": "~0.0.18",
+    "angular-easyfb": "~1.3.2"
   },
   "resolutions": {
     "angular": "~1.2"
