--- a/FutbolBrasil/web/conf/application.conf
+++ b/FutbolBrasil/web/conf/application.conf
@@ -57,7 +57,7 @@ hecticusvars.ip = "int.bd.hecticus.com"
 
 #default database: football_brazil
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://"${?hecticusvars.ip}":3306/football_brazil?characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://"${?hecticusvars.ip}":3306/football_generic?characterEncoding=UTF-8"
 db.default.user=${?hecticusvars.login}
 db.default.password=${?hecticusvars.password}
 db.default.partitionCount=2
