--- a/NoticiasTVN/NoticiasTVN/platforms/android/AndroidManifest.xml
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:hardwareAccelerated="true" android:versionCode="500005" android:versionName="4.0.6" android:windowSoftInputMode="adjustPan" package="air.com.tvn.app.mobile.TVNNoticias" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:hardwareAccelerated="true" android:versionCode="3000016" android:versionName="4.0.7" android:windowSoftInputMode="adjustPan" package="air.com.tvn.app.mobile.TVNNoticias" xmlns:android="http://schemas.android.com/apk/res/android">
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true" android:smallScreens="true" android:xlargeScreens="true" />
     <application android:hardwareAccelerated="true" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" android:label="@string/app_name" android:name="NoticiasTVN" android:screenOrientation="portrait" android:theme="@android:style/Theme.Black.NoTitleBar">
@@ -13,7 +13,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <category android:name="com.tvn.app.mobile.TVNNoticias" />
+                <category android:name="air.com.tvn.app.mobile.TVNNoticias" />
             </intent-filter>
         </receiver>
         <service android:name="com.plugin.gcm.GCMIntentService" />
@@ -30,8 +30,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <permission android:name="com.tvn.app.mobile.TVNNoticias.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-    <uses-permission android:name="com.tvn.app.mobile.TVNNoticias.permission.C2D_MESSAGE" />
+    <permission android:name="air.com.tvn.app.mobile.TVNNoticias.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="air.com.tvn.app.mobile.TVNNoticias.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
